# decision-agent/agent-backend/agent-factory/cmd/openapi-docs/generated/swagger/swagger.json
@@ -5614,10 +5614,6 @@
                         }
                     ]
                 },
-                "is_use_tool_id_in_dolphin": {
-                    "description": "dolphin 中是否使用 tool id",
-                    "type": "integer"
-                },
                 "llms": {
                     "description": "LLM 配置",
                     "type": "array",
@@ -5681,7 +5677,7 @@
                     }
                 },
                 "pre_dolphin": {
-                    "description": "在用户自定义 dolphin 之前执行的内置 dolphin 语句",
+                    "description": "IsUseToolIDInDolphin      int                                     `json:\"is_use_tool_id_in_dolphin\"`   // dolphin 中是否使用 tool id",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/daconfvalobj.DolphinTpl"
